--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -17,7 +17,7 @@
       <ul class="nav nav-pills nav-flush flex-column mb-auto text-center h-100 d-flex justify-content-center my-auto">
         <li class="nav-item">
           <a
-            href="#"
+            href="/"
             class="nav-link py-3 border-bottom rounded-0"
             aria-current="page"
             data-bs-toggle="tooltip"
