--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog de cocina</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="/styles/style.css" />
-    <script src="../index.js"></script>
-  </head>
 
-  <body>
-    <header>
-      <form action="/search" method="GET" class="search-input">
-        <input type="text" name="Search bar" placeholder="Buscar..." class="search-bar"/>
-        <button type="submit" class="search-btn">
-          <img src="/images/icons/search.svg" alt="search icon" width="24px" />
-        </button>
-      </form>
-    </header>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Blog de cocina</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Lobster&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap"
+    rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
+  <link rel="stylesheet" href="/styles/style.css" />
+  <script src="../index.js"></script>
+</head>
+
+<body>
+  <header>
+    <form action="/search" method="GET" class="search-input">
+      <input type="text" name="Search bar" placeholder="Buscar..." class="search-bar" />
+      <button type="submit" class="search-btn">
+        <img src="/images/icons/search.svg" alt="search icon" width="24px" />
+      </button>
+    </form>
+  </header>
+</body>
+
 </html>
