--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -96,6 +96,7 @@ main > section {
   width: 60%;
   padding: 1rem;
   height: 100%;
+  position: relative;
 }
 
 .text {
@@ -137,6 +138,31 @@ a {
   text-decoration: none;
   color: saddlebrown;
   font-weight: 600;
+}
+
+.edit {
+  border: none;
+  background: 0%;
+  width: 50px;
+  text-align: center;
+  position: absolute;
+  right: 50px;
+  bottom: 10px;
+}
+
+.delete {
+  border: none;
+  background: 0%;
+  width: 50px;
+  text-align: center;
+  position: absolute;
+  right: 15px;
+  bottom: 10px;
+}
+
+.edit:hover,
+.delete:hover {
+  transform: scale(1.5);
 }
 
 /* ====================================================== SCROLLBARS ====================================================== */
